--- a/LIPseg.ipynb
+++ b/LIPseg.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyONDsnv5Jfv/ugalwbTpGCV",
+      "authorship_tag": "ABX9TyMbPlD5BP+fmvIy3AYndnuM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -153,74 +153,84 @@
     {
       "cell_type": "code",
       "source": [
-        "# Import necessary libraries\n",
+        "# ============================================\n",
+        "# 🚀 Setup: Install Required Packages\n",
+        "# ============================================\n",
+        "\n",
+        "# Install necessary packages quietly to avoid cluttering the output\n",
+        "!pip install -q torchinfo pycocotools albumentations==1.2.1 opencv-python matplotlib\n",
+        "\n",
+        "# ============================================\n",
+        "# 📚 Import Standard Libraries\n",
+        "# ============================================\n",
+        "\n",
         "import os\n",
         "import numpy as np\n",
-        "import statistics\n",
         "import random\n",
-        "import logging\n",
         "import time\n",
         "import json\n",
+        "import statistics\n",
+        "import logging\n",
+        "\n",
+        "# ============================================\n",
+        "# 🎨 Import Visualization Libraries\n",
+        "# ============================================\n",
+        "\n",
         "import matplotlib.pyplot as plt\n",
         "from PIL import Image\n",
         "from tqdm import tqdm\n",
+        "import cv2\n",
+        "\n",
+        "# ============================================\n",
+        "# 🧠 Import Deep Learning Libraries\n",
+        "# ============================================\n",
         "\n",
         "import torch\n",
         "import torchvision\n",
         "from torch.utils.data import Dataset, DataLoader, random_split\n",
         "import torch.optim as optim\n",
         "from torch.optim.lr_scheduler import StepLR\n",
+        "import torch.nn.functional as F\n",
+        "\n",
         "from torchvision import transforms\n",
-        "from torchvision.transforms import functional as F\n",
+        "from torchvision.transforms import functional as TF\n",
         "from torchvision.models.segmentation import deeplabv3_resnet50\n",
         "from torchvision.models.segmentation.deeplabv3 import DeepLabHead\n",
         "\n",
-        "!pip install torchinfo\n",
-        "from torchinfo import summary\n",
+        "# ============================================\n",
+        "# 🔧 Import Additional Libraries\n",
+        "# ============================================\n",
         "\n",
-        "!pip install pycocotools\n",
-        "from pycocotools.coco import COCO\n",
-        "from pycocotools.cocoeval import COCOeval\n",
-        "from pycocotools import mask as mask_util\n",
-        "\n",
-        "!pip install albumentations==1.2.1\n",
-        "!pip install opencv-python\n",
-        "!pip install matplotlib\n",
-        "import cv2\n",
         "import albumentations as A\n",
         "from albumentations.pytorch import ToTensorV2\n",
         "\n",
+        "from torchinfo import summary\n",
+        "\n",
         "from google.colab import drive, files\n",
+        "from IPython.display import display\n",
         "\n",
+        "# ============================================\n",
+        "# ⚙️ Set Computational Device\n",
+        "# ============================================\n",
         "\n",
-        "from IPython.display import display"
+        "# Check if CUDA (GPU) is available and set the device accordingly\n",
+        "device = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')\n",
+        "print(f\"Using device: {device}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3990O6CAqKk2",
-        "outputId": "624bf9c7-f6cb-410b-9c9e-58d67929f8f1"
+        "outputId": "91727d49-4c89-44e3-e149-23be64275063"
       },
-      "execution_count": 27,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: torchinfo in /usr/local/lib/python3.10/dist-packages (1.8.0)\n",
-            "Requirement already satisfied: pycocotools in /usr/local/lib/python3.10/dist-packages (2.0.8)\n",
-            "Requirement already satisfied: matplotlib>=2.1.0 in /usr/local/lib/python3.10/dist-packages (from pycocotools) (3.7.1)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from pycocotools) (1.26.4)\n",
-            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=2.1.0->pycocotools) (1.3.0)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=2.1.0->pycocotools) (0.12.1)\n",
-            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=2.1.0->pycocotools) (4.53.1)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=2.1.0->pycocotools) (1.4.7)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=2.1.0->pycocotools) (24.1)\n",
-            "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=2.1.0->pycocotools) (10.4.0)\n",
-            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=2.1.0->pycocotools) (3.1.4)\n",
-            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=2.1.0->pycocotools) (2.8.2)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.7->matplotlib>=2.1.0->pycocotools) (1.16.0)\n"
+            "Using device: cpu\n"
           ]
         }
       ]
@@ -1842,118 +1852,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "import os\n",
-        "import numpy as np\n",
-        "import random\n",
-        "import time\n",
-        "import json\n",
-        "import matplotlib.pyplot as plt\n",
-        "from PIL import Image\n",
-        "from tqdm import tqdm\n",
-        "\n",
-        "import torch\n",
-        "import torchvision\n",
-        "from torch.utils.data import Dataset, DataLoader, random_split\n",
-        "import torch.nn.functional as F\n",
-        "import torch.optim as optim\n",
-        "from torch.optim.lr_scheduler import StepLR\n",
-        "from torchvision import transforms\n",
-        "from torchvision.transforms import functional as F\n",
-        "from torchvision.models.detection.faster_rcnn import FastRCNNPredictor\n",
-        "from torchvision.models.detection.mask_rcnn import MaskRCNNPredictor\n",
-        "from torchvision.ops import box_iou\n",
-        "!pip install torchinfo\n",
-        "from torchinfo import summary\n",
-        "\n",
-        "!pip install pycocotools\n",
-        "from pycocotools.coco import COCO\n",
-        "from pycocotools.cocoeval import COCOeval\n",
-        "from pycocotools import mask as mask_util\n",
-        "\n",
-        "!pip install albumentations==1.2.1\n",
-        "!pip install opencv-python\n",
-        "!pip install matplotlib\n",
-        "import cv2\n",
-        "import albumentations as A\n",
-        "from albumentations.pytorch import ToTensorV2\n",
-        "\n",
-        "from google.colab import drive"
-      ],
+      "source": [],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6JulNT4VboBv",
-        "outputId": "6c3ad68b-e6dc-4158-f3e5-e439056fc816"
+        "id": "6JulNT4VboBv"
       },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting torchinfo\n",
-            "  Downloading torchinfo-1.8.0-py3-none-any.whl.metadata (21 kB)\n",
-            "Downloading torchinfo-1.8.0-py3-none-any.whl (23 kB)\n",
-            "Installing collected packages: torchinfo\n",
-            "Successfully installed torchinfo-1.8.0\n",
-            "Requirement already satisfied: pycocotools in /usr/local/lib/python3.10/dist-packages (2.0.8)\n",
-            "Requirement already satisfied: matplotlib>=2.1.0 in /usr/local/lib/python3.10/dist-packages (from pycocotools) (3.7.1)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from pycocotools) (1.26.4)\n",
-            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=2.1.0->pycocotools) (1.3.0)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=2.1.0->pycocotools) (0.12.1)\n",
-            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=2.1.0->pycocotools) (4.53.1)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=2.1.0->pycocotools) (1.4.7)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=2.1.0->pycocotools) (24.1)\n",
-            "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=2.1.0->pycocotools) (10.4.0)\n",
-            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=2.1.0->pycocotools) (3.1.4)\n",
-            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=2.1.0->pycocotools) (2.8.2)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.7->matplotlib>=2.1.0->pycocotools) (1.16.0)\n",
-            "Collecting albumentations==1.2.1\n",
-            "  Downloading albumentations-1.2.1-py3-none-any.whl.metadata (33 kB)\n",
-            "Requirement already satisfied: numpy>=1.11.1 in /usr/local/lib/python3.10/dist-packages (from albumentations==1.2.1) (1.26.4)\n",
-            "Requirement already satisfied: scipy in /usr/local/lib/python3.10/dist-packages (from albumentations==1.2.1) (1.13.1)\n",
-            "Requirement already satisfied: scikit-image>=0.16.1 in /usr/local/lib/python3.10/dist-packages (from albumentations==1.2.1) (0.23.2)\n",
-            "Requirement already satisfied: PyYAML in /usr/local/lib/python3.10/dist-packages (from albumentations==1.2.1) (6.0.2)\n",
-            "Collecting qudida>=0.0.4 (from albumentations==1.2.1)\n",
-            "  Downloading qudida-0.0.4-py3-none-any.whl.metadata (1.5 kB)\n",
-            "Requirement already satisfied: opencv-python-headless>=4.1.1 in /usr/local/lib/python3.10/dist-packages (from albumentations==1.2.1) (4.10.0.84)\n",
-            "Requirement already satisfied: scikit-learn>=0.19.1 in /usr/local/lib/python3.10/dist-packages (from qudida>=0.0.4->albumentations==1.2.1) (1.3.2)\n",
-            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.10/dist-packages (from qudida>=0.0.4->albumentations==1.2.1) (4.12.2)\n",
-            "Requirement already satisfied: networkx>=2.8 in /usr/local/lib/python3.10/dist-packages (from scikit-image>=0.16.1->albumentations==1.2.1) (3.3)\n",
-            "Requirement already satisfied: pillow>=9.1 in /usr/local/lib/python3.10/dist-packages (from scikit-image>=0.16.1->albumentations==1.2.1) (10.4.0)\n",
-            "Requirement already satisfied: imageio>=2.33 in /usr/local/lib/python3.10/dist-packages (from scikit-image>=0.16.1->albumentations==1.2.1) (2.35.1)\n",
-            "Requirement already satisfied: tifffile>=2022.8.12 in /usr/local/lib/python3.10/dist-packages (from scikit-image>=0.16.1->albumentations==1.2.1) (2024.8.30)\n",
-            "Requirement already satisfied: packaging>=21 in /usr/local/lib/python3.10/dist-packages (from scikit-image>=0.16.1->albumentations==1.2.1) (24.1)\n",
-            "Requirement already satisfied: lazy-loader>=0.4 in /usr/local/lib/python3.10/dist-packages (from scikit-image>=0.16.1->albumentations==1.2.1) (0.4)\n",
-            "Requirement already satisfied: joblib>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from scikit-learn>=0.19.1->qudida>=0.0.4->albumentations==1.2.1) (1.4.2)\n",
-            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn>=0.19.1->qudida>=0.0.4->albumentations==1.2.1) (3.5.0)\n",
-            "Downloading albumentations-1.2.1-py3-none-any.whl (116 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m116.7/116.7 kB\u001b[0m \u001b[31m9.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading qudida-0.0.4-py3-none-any.whl (3.5 kB)\n",
-            "Installing collected packages: qudida, albumentations\n",
-            "  Attempting uninstall: albumentations\n",
-            "    Found existing installation: albumentations 1.4.15\n",
-            "    Uninstalling albumentations-1.4.15:\n",
-            "      Successfully uninstalled albumentations-1.4.15\n",
-            "Successfully installed albumentations-1.2.1 qudida-0.0.4\n",
-            "Requirement already satisfied: opencv-python in /usr/local/lib/python3.10/dist-packages (4.10.0.84)\n",
-            "Requirement already satisfied: numpy>=1.21.2 in /usr/local/lib/python3.10/dist-packages (from opencv-python) (1.26.4)\n",
-            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.10/dist-packages (3.7.1)\n",
-            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (1.3.0)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (0.12.1)\n",
-            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (4.53.1)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (1.4.7)\n",
-            "Requirement already satisfied: numpy>=1.20 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (1.26.4)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (24.1)\n",
-            "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (10.4.0)\n",
-            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (3.1.4)\n",
-            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.10/dist-packages (from matplotlib) (2.8.2)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n"
-          ]
-        }
-      ]
+      "execution_count": 46,
+      "outputs": []
     },
     {
       "cell_type": "code",
